--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=flyvest-mobile-application
 
+logging.level.org.springframework.security=DEBUG
+
 # GitHub Login
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
@@ -11,7 +13,7 @@ spring.security.oauth2.client.registration.github.scope=email, public_profile
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
-logging.level.org.springframework.security=TRACE
+//logging.level.org.springframework.security=TRACE
 
 
 # ===========================================================
@@ -44,7 +46,13 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+app.url.verification=http://localhost:8080/api/auth/confirm?token=
 
+# URL for login
+#app.url.login=http://localhost:5173/register
+
+# URL for password reset
+#app.url.reset-password=http://localhost:5173/reset-password?token=
 # ===========================================================
 #- JWT SECRETE KEY
 # ===========================================================
