signup and Login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,24 @@ spring.application.name=flyvest-mobile-application
 
 logging.level.org.springframework.security=DEBUG
 
+logging.level.org.springframework.web=DEBUG
+
+
 # GitHub Login
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
-#spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
-#spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.registration.github.scope=email, public_profile
 
 # Google Login
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=email, profile
 
-//logging.level.org.springframework.security=TRACE
+
+#logging.level.org.springframework.security=TRACE
 
 
 # ===========================================================
