--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,6 +64,8 @@ app.url.verification=http://localhost:8080/api/auth/confirm?token=
 # ===========================================================
 jwt.secret.key = ${JWT_SECRET_KEY}
 
+baseUrl = http://127.0.0.1:8080
+
 
 # ==========================================================
 # TO SEED AN ADMIN INTO THE APPLICATION
