last two endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,3 +73,8 @@ baseUrl = http://127.0.0.1:8080
 flyvest.admin.email = admin@example.com
 flyvest.admin.password = password
 flyvest.admin.fullname = Admin
+
+#View Calendar: Let mentors view their booking calendar.
+#Goal Setting: Enable users to set and personalize their financial goals.
+#Mentor Profile Edit: Allow mentors to edit their profile.
+#Mentor Task Management: Mentors should be able to create task goals for better organization when attending to mentees.
